<resources>
    <string name="app_name">Zero Queue</string>
    <string name="prompt_name">Name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">CPF</string>
    <string name="action_sign_in">Sign or Register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_password">This CPF is wrong</string>
    <string name="error_incorrect_password">This CPF is wrong</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">Your position</string>
    <string name="isnt_queue">You is not in the queue</string>
    <string name="is_attendance">You is in attendance</string>
    <string name="is_next">You is the next of the queue</string>
    <string name="miss">Missign</string>
    <string name="a_person">1 person</string>
    <string name="people"> people</string>
    <string name="misss">Missign</string>
    <string name="will_attendance">You will attended in</string>
    <string name="average">Average service</string>
    <string name="checkin">Check-in</string>
    <string name="loading">Loading</string>
    <string name="checkin_success">Check-in requested successful</string>
    <string name="minutes"> minutes</string>
    <string name="route">Route</string>
    <string name="logout">Logout</string>
</resources>
